--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,5 +1,10 @@
 <ion-header>
   <ion-navbar>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="onConfig()">
+        <ion-icon name="construct"></ion-icon>
+      </button>
+    </ion-buttons>
     <ion-title>
       Ionic Blank
     </ion-title>
@@ -7,8 +12,10 @@
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+
+
+  <button ion-button icon-start block (click)="onButton()">
+    <ion-icon name='key'></ion-icon>
+    config mqtt server
+  </button>
 </ion-content>
